# llm-zoomcamp

./: .gitignore  pyproject.toml
01-agentic-rag/homework1/: homework_1_notebook.ipynb  rag_helper2.py
